texi2html/test/invalid/res/texi_math_not_closed/math_not_closed.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename math_no_closed.info

@node Top

@special_math_1{}
@chapter Chapter 

@special_math_2{}
